Hash passwords with bcrypt

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript": "2.5.2"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "passport": "^0.4.0",
