Exclude password in toJSON using class-transformer

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
+    "class-transformer": "^0.1.8",
     "express": "^4.15.4",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
