--- a/skalan-backend/package.json
+++ b/skalan-backend/package.json
@@ -12,11 +12,13 @@
     "body-parser": "^1.18.1",
     "class-transformer": "^0.1.8",
     "express": "^4.15.4",
+    "express-fileupload": "^1.1.1-alpha.3",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.1.9"
+    "typeorm": "0.1.9",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "ts-node src/app.ts"
