--- a/skalan-backend/package.json
+++ b/skalan-backend/package.json
@@ -18,6 +18,7 @@
     "passport-http": "^0.3.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
+    "sharp": "^0.22.0",
     "typeorm": "0.1.9",
     "uuid": "^3.3.2"
   },
